--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "1.0.0-beta.16",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "ember-try": "0.0.1"
   },
   "dependencies": {
     "ember-cli-babel": "^4.0.0"
