--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
-    - env: EMBER_TRY_SCENARIO=ember-canary
+    - env: EMBER_TRY_SCENARIO=ember-canary EMBER_TRY_SCENARIO=ember-beta
 
 before_install:
   - export PATH=/usr/local/phantomjs-2.0.0/bin:$PATH
