--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,6 @@
 {
   "name": "ember-cli-chart",
   "dependencies": {
-    "ember": "~2.5.0",
-    "ember-cli-shims": "0.1.1",
-    "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "chartjs": "2.5.0"
   }
 }
