--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "2.13.3",
-    "ember-cli-dependency-checker": "^1.3.0",
-    "ember-cli-eslint": "^3.0.0",
-    "ember-cli-htmlbars": "^1.1.1",
-    "ember-cli-htmlbars-inline-precompile": "^0.4.0",
+    "ember-cli": "2.14.2",
+    "ember-cli-dependency-checker": "^2.0.1",
+    "ember-cli-eslint": "^4.2.0",
+    "ember-cli-htmlbars": "^2.0.3",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.2",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
@@ -41,13 +41,15 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-source": "~2.13.3",
+    "ember-source": "~2.14.1",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
   "dependencies": {
     "chart.js": "^2.6.0",
-    "ember-cli-babel": "^6.3.0"
+    "ember-cli-babel": "^6.5.0",
+    "fastboot-transform": "^0.1.2",
+    "ember-cli-node-assets": "^0.2.2"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
