--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "keywords": [
     "ember-addon"
   ],
+  "homepage": "https://github.com/aomran/ember-cli-chart",
+  "bugs": {
+    "url": "https://github.com/aomran/ember-cli-chart/issues"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/aomran/ember-cli-chart.git"
@@ -32,10 +36,6 @@
     "ember-cli-node-assets": "^0.2.2",
     "fastboot-transform": "^0.1.2"
   },
-  "bugs": {
-    "url": "https://github.com/aomran/ember-cli-chart/issues"
-  },
-  "homepage": "https://github.com/aomran/ember-cli-chart",
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.0",
@@ -63,15 +63,35 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "release-it": "^13.6.5",
+    "release-it-lerna-changelog": "^2.3.0"
   },
   "engines": {
     "node": "10.* || >= 12"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   },
   "ember": {
     "edition": "octane"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
+  },
+  "release-it": {
+    "plugins": {
+      "release-it-lerna-changelog": {
+        "infile": "CHANGELOG.md",
+        "launchEditor": false
+      }
+    },
+    "git": {
+      "tagName": "v${version}"
+    },
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_AUTH"
+    }
   }
 }
