--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@ember/render-modifiers": "^1.0.2",
+    "@ember/test-helpers": "2.2.8",
     "chart.js": "^2.9.0",
     "ember-cli-babel": "^7.20.5",
     "ember-cli-htmlbars": "^5.1.2",
@@ -53,7 +54,7 @@
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.1",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^4.6.0",
+    "ember-qunit": "5.1.4",
     "ember-resolver": "^8.0.0",
     "ember-source": "~3.19.0",
     "ember-source-channel-url": "^2.0.1",
@@ -64,7 +65,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0",
+    "qunit": "2.16.0",
+    "qunit-dom": "1.6.0",
     "release-it": "^13.6.5",
     "release-it-lerna-changelog": "^2.3.0"
   },
