--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ember/render-modifiers": "^1.0.2",
     "chart.js": "^3.5.0",
     "chartjs-adapter-luxon": "^1.0.0",
-    "chartjs-chart-financial": "chartjs/chartjs-chart-financial",
+    "temp-chartjs-candlestick": "^0.0.3",
     "ember-auto-import": "^1.5.3",
     "ember-cli-babel": "^7.20.5",
     "ember-cli-htmlbars": "^5.1.2",
