--- a/package.json
+++ b/package.json
@@ -36,11 +36,10 @@
     "@ember/render-modifiers": "^2.0.5",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
-    "chart.js": "^3.5.0",
+    "chart.js": "^4.2.1",
+    "ember-auto-import": "^2.6.0",
     "ember-cli-babel": "^7.26.6",
-    "ember-cli-htmlbars": "^5.7.1",
-    "ember-cli-node-assets": "^0.2.2",
-    "fastboot-transform": "^0.1.2"
+    "ember-cli-htmlbars": "^5.7.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
@@ -49,7 +48,6 @@
     "@embroider/test-setup": "^0.43.5",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^2.6.0",
     "ember-cli": "~3.28.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
